<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/blue_background">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/mail_icon"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@android:color/white"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/verified_icon"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@android:color/white"
        android:drawablePadding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="20dp">
        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_height="60dp"
        android:layout_width="370dp"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="8dp"
        android:padding="20dp"
        android:text="@string/login"
        android:textColor="#3F51B5" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/googleLoginButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:drawableStart="@drawable/google_icon"
            android:drawablePadding="8dp"
            android:padding="20dp"
            android:text="@string/google"
            android:textColor="#3F51B5" />

        <Button
            android:id="@+id/facebookLoginButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:drawableStart="@drawable/facebook_icon"
            android:drawablePadding="8dp"
            android:padding="20dp"
            android:text="@string/facebook"
            android:textColor="#3F51B5" />
    </LinearLayout>

</LinearLayout>